# zine-v4

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/commands/: mod.rs  utils.rs
src/commands/bot/: help.rs  mod.rs  ping.rs  stats.rs
src/commands/config/: config.rs  mod.rs  prefix.rs  theme.rs
src/commands/dev/: mod.rs  services.rs  shell.rs
src/commands/info/: channel.rs  mod.rs  role.rs  server.rs  user.rs
src/commands/moderation/: ban.rs  delete_punishment.rs  kick.rs  mod.rs  mute.rs  punishment.rs  tempban.rs  tempmute.rs  timeout.rs  unmute.rs  untimeout.rs  warn.rs
src/commands/util/: ascii_art.rs  mod.rs
src/database/: connect.rs  guild_config.rs  mod.rs  moderation.rs
src/events/: mod.rs  ready.rs
src/language/: en-US.toml  handler.rs  pl.toml
src/macros/: maps.rs  memory.rs  mod.rs  text.rs
src/models/: color.rs  duration.rs  mod.rs
src/services/: mod.rs  temp_bans.rs  temp_mutes.rs
src/theme/: embeds.rs
src/utils/: confirmation.rs  discord.rs  embeds.rs  framework.rs  mod.rs  types.rs  uasync.rs
