[package]
name = "zine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["time", "macros", "rt-multi-thread"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
figlet-rs = "0.1.5"
sysinfo = "0.29.0"
mongodb = "2.5.0"
chrono = "0.4.24"
dotenv = "0.15.0"
poise = "0.5.4"
rand = "0.8.5"
toml = "0.7.3"
