[package]
name = "zine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["time", "macros", "rt-multi-thread"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
figlet-rs = "0.1.5"
sysinfo = "0.30.7"
mongodb = "2.8.1"
chrono = "0.4.35"
dotenv = "0.15.0"
poise = "0.6.1"
rand = "0.8.5"
toml = "0.8.10"